[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/menu_ingame.gd" type="Script" id=1]
[ext_resource path="res://Shaders/quick_menu_overlay_shader.tres" type="Material" id=2]
[ext_resource path="res://Sprites/vfx/vfx_fullscr_noise.jpg" type="Texture" id=3]
[ext_resource path="res://Instances/ingame_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/labels_small.tres" type="Theme" id=5]
[ext_resource path="res://Instances/headphones.tscn" type="PackedScene" id=6]

[sub_resource type="GDScript" id=1]
script/source = "#debug mouse info head angle

extends Label

func _process(delta):
	if not n_mng.gui.fl_mouse_info: return
	
	text = str(stepify ( n_mng.pl.sight_angle , 0.001) )
"

[sub_resource type="GDScript" id=2]
script/source = "#FPS

extends Label

func _ready():
	set_process(true)

func _process(delta):
	text = str(Engine.get_frames_per_second())"

[sub_resource type="GDScript" id=3]
script/source = "extends Label

func _ready():
	set_process_input(true)

func _input(event):
	if event is InputEventMouseMotion:
		text = str(utl.n_base().get_global_mouse_position().floor())"

[sub_resource type="GDScript" id=4]
script/source = "#tm_cell debig screen

extends Label

onready var lb = get_parent().get_parent().get_node(\"lbls/lb_tm\")

func _ready():
	set_process_input(true)

func _input(event):
	if n_mng.gui.fl_debug_mode:
		if event is InputEventMouseMotion:
			var m_pos   = utl.n_base().get_global_mouse_position().floor()
			var t_pos   = Vector2( int(m_pos.x/32) , int(m_pos.y/32) )
			var tm_name = \"tilemap(s) - \"
			var cell_s  = \"-\"
			var cell_c  = \"-\"
			var cell_p  = \"-\"
			var lb_cell = str(t_pos)
			if n_mng.tm_solid.get_cell( t_pos.x , t_pos.y ) != -1:
				tm_name += \"solid \"
				cell_s = str(n_mng.tm_solid.get_cell( t_pos.x , t_pos.y ))
			if n_mng.tm_climb.get_cell( t_pos.x , t_pos.y ) != -1:
				tm_name += \"climb \"
				cell_c = str(n_mng.tm_climb.get_cell( t_pos.x , t_pos.y ))
			if n_mng.tm_platf.get_cell( t_pos.x , t_pos.y ) != -1:
				tm_name += \"platf \"
				cell_p = str(n_mng.tm_platf.get_cell( t_pos.x , t_pos.y ))
			
			lb_cell = str(t_pos) + \" - [ \" +cell_s+ \" , \" +cell_c+ \" , \" +cell_p+ \" ]\"
			
			lb.text   = tm_name
			self.text = lb_cell"

[sub_resource type="GDScript" id=5]
script/source = "#debug_flags_pl_movement

extends Label

var time   = 0.05
var status = 10

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.pl_movement:
		status = n_mng.pl.pl_movement
		match status:
			0: self.text = \"BUSY\"
			1: self.text = \"IDLE\"
			2: self.text = \"CROUCH_IDLE\"
			3: self.text = \"PRONE\"
			4: self.text = \"WALK\"
			5: self.text = \"RUN\"
			6: self.text = \"SPRINT\"
			7: self.text = \"JUMP\"
			8: self.text = \"STEALTH\"
			9: self.text = \"CROUCH_WALK\"
			10: self.text = \"ROLL\"
			11: self.text = \"CLIMB_LADDER\"
			12: self.text = \"CLIMB_LADDER_U\"
			13: self.text = \"CLIMB_LADDER_D\"
			14: self.text = \"CLIMB_ROPE\"
			15: self.text = \"CLIMB_ROPE_U\"
			16: self.text = \"CLIMB_ROPE_D\""

[sub_resource type="GDScript" id=6]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = []

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red    = n_mng.gui.col_red
	var green  = n_mng.gui.col_green
	var orange = n_mng.gui.col_orange
	if status != [n_mng.pl.st_on_floor , n_mng.pl.st_fron_unbal , n_mng.pl.st_back_unbal]:
		status = [n_mng.pl.st_on_floor , n_mng.pl.st_fron_unbal , n_mng.pl.st_back_unbal]
		if   status[1]:
			self.text = \"unbalanced front\"
			modulate  = orange
		elif status[2]:
			self.text = \"unbalanced back\"
			modulate  = orange
		elif status[0]:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=7]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

#var st_on_floor  = true
#var st_action    = false setget _st_action_changed
#var st_aim       = false setget _st_aim_changed
#var st_look_at   = false
#var st_can_jump  = true
#
#var st_att_ladd  = false
#var st_att_rope  = false
#var st_next_ladd = false
#var st_on_ladd   = false
#var st_next_rope = false
#var st_on_rope   = false
#var st_on_plat   = false
#
#var st_moving    = false
#var st_sprinting = false
#var st_crouching = false
#var st_jumping   = false
#
#var pl_movement  = 1
#enum PlMove {BLOCKED,
#IDLE,CROUCH_IDLE,PRONE,
#WALK,RUN,SPRINT,JUMP,
#STEALTH,CROUCH_WALK,ROLL,
#CLIMB_LADDER,CLIMB_ROPE}

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_action:
		status = n_mng.pl.st_action
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=8]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

#var st_on_floor  = true
#var st_action    = false setget _st_action_changed
#var st_aim       = false setget _st_aim_changed
#var st_look_at   = false
#var st_can_jump  = true
#
#var st_att_ladd  = false
#var st_att_rope  = false
#var st_next_ladd = false
#var st_on_ladd   = false
#var st_next_rope = false
#var st_on_rope   = false
#var st_on_plat   = false
#
#var st_moving    = false
#var st_sprinting = false
#var st_crouching = false
#var st_jumping   = false
#
#var pl_movement  = 1
#enum PlMove {BLOCKED,
#IDLE,CROUCH_IDLE,PRONE,
#WALK,RUN,SPRINT,JUMP,
#STEALTH,CROUCH_WALK,ROLL,
#CLIMB_LADDER,CLIMB_ROPE}

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_can_jump:
		status = n_mng.pl.st_can_jump
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=9]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_armed:
		status = n_mng.pl.st_armed
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=10]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = []

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red    = n_mng.gui.col_red
	var green  = n_mng.gui.col_green
	var orange = n_mng.gui.col_orange
	if status != [n_mng.pl.st_on_ladd , n_mng.pl.st_next_ladd , n_mng.pl.st_att_ladd]:
		status = [n_mng.pl.st_on_ladd , n_mng.pl.st_next_ladd , n_mng.pl.st_att_ladd]
		if   status[2]:
			text = \"attached\" ; modulate = green
		elif status[1]:
			text = \"next\" ; modulate = orange
		elif status[0]:
			text = \"on top\" ; modulate = orange
		else:
			text = \"false\" ; modulate = red"

[sub_resource type="GDScript" id=11]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = []

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red    = n_mng.gui.col_red
	var green  = n_mng.gui.col_green
	var orange = n_mng.gui.col_orange
	if status != [n_mng.pl.st_on_rope , n_mng.pl.st_next_rope , n_mng.pl.st_att_rope]:
		status = [n_mng.pl.st_on_rope , n_mng.pl.st_next_rope , n_mng.pl.st_att_rope]
		if   status[2]:
			text = \"attached\" ; modulate = green
		elif status[1]:
			text = \"next\" ; modulate = orange
		elif status[0]:
			text = \"on top\" ; modulate = orange
		else:
			text = \"false\" ; modulate = red"

[sub_resource type="GDScript" id=12]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_on_plat:
		status = n_mng.pl.st_on_plat
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=13]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

#var st_on_floor  = true
#var st_action    = false setget _st_action_changed
#var st_aim       = false setget _st_aim_changed
#var st_look_at   = false
#var st_can_jump  = true
#
#var st_att_ladd  = false
#var st_att_rope  = false
#var st_next_ladd = false
#var st_on_ladd   = false
#var st_next_rope = false
#var st_on_rope   = false
#var st_on_plat   = false
#
#var st_moving    = false
#var st_sprinting = false
#var st_crouching = false
#var st_jumping   = false
#
#var pl_movement  = 1
#enum PlMove {BLOCKED,
#IDLE,CROUCH_IDLE,PRONE,
#WALK,RUN,SPRINT,JUMP,
#STEALTH,CROUCH_WALK,ROLL,
#CLIMB_LADDER,CLIMB_ROPE}

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_on_floor:
		status = n_mng.pl.st_on_floor
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[sub_resource type="GDScript" id=14]
script/source = "#debug_flags_pl_on_floor

extends Label

var time   = 0.05
var status = false

func _process(delta):
	time -= delta
	if time < 0:
		time = 0.05
		refresh()

#var st_on_floor  = true
#var st_action    = false setget _st_action_changed
#var st_aim       = false setget _st_aim_changed
#var st_look_at   = false
#var st_can_jump  = true
#
#var st_att_ladd  = false
#var st_att_rope  = false
#var st_next_ladd = false
#var st_on_ladd   = false
#var st_next_rope = false
#var st_on_rope   = false
#var st_on_plat   = false
#
#var st_moving    = false
#var st_sprinting = false
#var st_crouching = false
#var st_jumping   = false
#
#var pl_movement  = 1
#enum PlMove {BLOCKED,
#IDLE,CROUCH_IDLE,PRONE,
#WALK,RUN,SPRINT,JUMP,
#STEALTH,CROUCH_WALK,ROLL,
#CLIMB_LADDER,CLIMB_ROPE}

func refresh():
	var red   = n_mng.gui.col_red
	var green = n_mng.gui.col_green
	if status != n_mng.pl.st_on_floor:
		status = n_mng.pl.st_on_floor
		if status:
			self.text = \"true\"
			modulate  = green
		else:
			self.text = \"false\"
			modulate  = red"

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 0
script = ExtResource( 1 )

[node name="quick_menu" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="overlay" type="TextureRect" parent="quick_menu"]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="menu" parent="." instance=ExtResource( 4 )]
editor/display_folded = true
visible = false

[node name="mouse_info" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="lbls" type="VBoxContainer" parent="mouse_info"]
editor/display_folded = true
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
custom_constants/separation = 0

[node name="lb1" type="Label" parent="mouse_info/lbls"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "angle"
align = 2

[node name="data" type="VBoxContainer" parent="mouse_info"]
editor/display_folded = true
margin_left = 136.0
margin_right = 264.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
custom_constants/separation = 0

[node name="head_angle" type="Label" parent="mouse_info/data"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "60"
script = SubResource( 1 )

[node name="show_off" type="Timer" parent="mouse_info"]
wait_time = 0.1
one_shot = true

[node name="debug" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="game_stat" type="HBoxContainer" parent="debug"]
editor/display_folded = true
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 68.0
custom_constants/separation = 8

[node name="lbls" type="VBoxContainer" parent="debug/game_stat"]
editor/display_folded = true
margin_right = 184.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="fps" type="Label" parent="debug/game_stat/lbls"]
margin_right = 184.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "fps"
align = 2

[node name="fps2" type="Label" parent="debug/game_stat/lbls"]
margin_top = 20.0
margin_right = 184.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "mouse position"
align = 2

[node name="lb_tm" type="Label" parent="debug/game_stat/lbls"]
margin_top = 40.0
margin_right = 184.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "tm - solid"
align = 2

[node name="data" type="VBoxContainer" parent="debug/game_stat"]
editor/display_folded = true
margin_left = 192.0
margin_right = 320.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
custom_constants/separation = 0

[node name="fps" type="Label" parent="debug/game_stat/data"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "60"
script = SubResource( 2 )

[node name="mouse_pos" type="Label" parent="debug/game_stat/data"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "(100,100)"
script = SubResource( 3 )

[node name="tm_cell" type="Label" parent="debug/game_stat/data"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "(100,100)"
script = SubResource( 4 )

[node name="player_var" type="VBoxContainer" parent="debug"]
editor/display_folded = true
margin_left = 84.0
margin_top = 92.0
margin_right = 280.0
margin_bottom = 212.0
custom_constants/separation = 0

[node name="st1" type="HBoxContainer" parent="debug/player_var"]
editor/display_folded = true
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 16 )
custom_constants/separation = 8

[node name="lb" type="Label" parent="debug/player_var/st1"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "accelleration"
align = 2

[node name="st" type="LineEdit" parent="debug/player_var/st1"]
margin_left = 114.0
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme = ExtResource( 5 )
text = "60"

[node name="st2" type="HBoxContainer" parent="debug/player_var"]
editor/display_folded = true
margin_top = 30.0
margin_right = 196.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 16 )
custom_constants/separation = 8

[node name="lb" type="Label" parent="debug/player_var/st2"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "jump velocity"
align = 2

[node name="st" type="LineEdit" parent="debug/player_var/st2"]
margin_left = 114.0
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme = ExtResource( 5 )
text = "60"

[node name="st3" type="HBoxContainer" parent="debug/player_var"]
editor/display_folded = true
margin_top = 60.0
margin_right = 196.0
margin_bottom = 90.0
rect_min_size = Vector2( 60, 16 )
custom_constants/separation = 8

[node name="lb" type="Label" parent="debug/player_var/st3"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "climb speed"
align = 2

[node name="st" type="LineEdit" parent="debug/player_var/st3"]
margin_left = 114.0
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme = ExtResource( 5 )
text = "60"

[node name="st4" type="HBoxContainer" parent="debug/player_var"]
editor/display_folded = true
margin_top = 90.0
margin_right = 196.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 16 )
custom_constants/separation = 8

[node name="lb" type="Label" parent="debug/player_var/st4"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "stop multiplier"
align = 2

[node name="st" type="LineEdit" parent="debug/player_var/st4"]
margin_left = 114.0
margin_right = 196.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
theme = ExtResource( 5 )
text = "60"

[node name="stat_bg" type="ColorRect" parent="debug"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 228.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.386745 )

[node name="pl_stat" type="HBoxContainer" parent="debug"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 48.0
custom_constants/separation = 8

[node name="lbls" type="VBoxContainer" parent="debug/pl_stat"]
editor/display_folded = true
margin_right = 128.0
margin_bottom = 200.0
rect_min_size = Vector2( 128, 16 )
custom_constants/separation = 0

[node name="lb" type="Label" parent="debug/pl_stat/lbls"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "animation movement"
align = 2

[node name="lb2" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on floor"
align = 2

[node name="lb3" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on action!"
align = 2

[node name="lb4" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "can jump"
align = 2

[node name="lb5" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 100.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "armed"
align = 2

[node name="lb6" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 100.0
margin_right = 128.0
margin_bottom = 120.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on ladder"
align = 2

[node name="lb7" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 140.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on rope"
align = 2

[node name="lb8" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 140.0
margin_right = 128.0
margin_bottom = 160.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on platform"
align = 2

[node name="lb9" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 160.0
margin_right = 128.0
margin_bottom = 180.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on floor"
align = 2

[node name="lb10" type="Label" parent="debug/pl_stat/lbls"]
margin_top = 180.0
margin_right = 128.0
margin_bottom = 200.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "on floor"
align = 2

[node name="data" type="VBoxContainer" parent="debug/pl_stat"]
editor/display_folded = true
margin_left = 136.0
margin_right = 264.0
margin_bottom = 200.0
rect_min_size = Vector2( 128, 16 )
custom_constants/separation = 0

[node name="pl_st1" type="Label" parent="debug/pl_stat/data"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "idle"
script = SubResource( 5 )

[node name="pl_st2" type="Label" parent="debug/pl_stat/data"]
margin_top = 20.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 6 )

[node name="pl_st3" type="Label" parent="debug/pl_stat/data"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 60.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 7 )

[node name="pl_st4" type="Label" parent="debug/pl_stat/data"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 8 )

[node name="pl_st5" type="Label" parent="debug/pl_stat/data"]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 100.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 9 )

[node name="pl_st6" type="Label" parent="debug/pl_stat/data"]
margin_top = 100.0
margin_right = 128.0
margin_bottom = 120.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 10 )

[node name="pl_st7" type="Label" parent="debug/pl_stat/data"]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 140.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 11 )

[node name="pl_st8" type="Label" parent="debug/pl_stat/data"]
margin_top = 140.0
margin_right = 128.0
margin_bottom = 160.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 12 )

[node name="pl_st9" type="Label" parent="debug/pl_stat/data"]
margin_top = 160.0
margin_right = 128.0
margin_bottom = 180.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 13 )

[node name="pl_st10" type="Label" parent="debug/pl_stat/data"]
margin_top = 180.0
margin_right = 128.0
margin_bottom = 200.0
rect_min_size = Vector2( 128, 16 )
theme = ExtResource( 5 )
text = "false"
script = SubResource( 14 )

[node name="headphones" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="mouse_info/show_off" to="." method="_on_mouse_info_show_timeout"]
